viewport issues on mobile

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background: #415a6c;
   margin: 0;
   font-family: 'Oswald';
-  font-size: 1.2em;
+  font-size: 1.0em;
 }
 .parallax-container {
   position: fixed;
